--- a/subprojects/docs/src/samples/userguide/dependencyManagement/workingWithDependencies/iterateDependencies/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencyManagement/workingWithDependencies/iterateDependencies/build.gradle
@@ -12,12 +12,14 @@ dependencies {
 }
 
 //START SNIPPET iteration-task
-task iterateScmDependencies {
+task iterateDeclaredDependencies {
     dependsOn configurations.scm
 
     doLast {
-        configurations.scm.dependencies.each {
-            println "$it.group:$it.name:$it.version"
+        DependencySet dependencySet = configurations.scm.dependencies
+
+        dependencySet.each {
+            logger.quiet "$it.group:$it.name:$it.version"
         }
     }
 }
