--- a/subprojects/docs/src/samples/userguide/dependencyManagement/declaringDependencies/configurationInheritance/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencyManagement/declaringDependencies/configurationInheritance/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 repositories {
     mavenCentral()
@@ -6,11 +6,11 @@ repositories {
 
 //START SNIPPET configuration-definition
 configurations {
-    smokeTest.extendsFrom testCompile
+    smokeTest.extendsFrom testImplementation
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     smokeTest 'org.apache.httpcomponents:httpclient:4.5.5'
 }
 //END SNIPPET configuration-definition
