--- a/subprojects/docs/src/samples/userguide/dependencyManagement/managingTransitiveDependencies/importingDependencyConstraintsFromBOM/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencyManagement/managingTransitiveDependencies/importingDependencyConstraintsFromBOM/build.gradle
@@ -6,8 +6,10 @@ repositories {
 
 //START SNIPPET dependency-on-bom
 dependencies {
+    // import a BOM
     implementation 'org.springframework.boot:spring-boot-dependencies:1.5.8.RELEASE'
 
+    // define dependencies without versions
     implementation 'com.google.code.gson:gson'
     implementation 'dom4j:dom4j'
 }
