--- a/subprojects/docs/src/samples/userguide/artifacts/dependencyBasics/build.gradle
+++ b/subprojects/docs/src/samples/userguide/artifacts/dependencyBasics/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.hibernate', name: 'hibernate-core', version: '3.6.7.Final'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    implementation 'org.hibernate:hibernate-core:3.6.7.Final'
+    testImplementation 'junit:junit:4.+'
 }
