Make sure latest cglib version is always used for Java 9 test execution

--- a/subprojects/internal-testing/internal-testing.gradle
+++ b/subprojects/internal-testing/internal-testing.gradle
@@ -37,6 +37,10 @@ dependencies {
     compile testLibraries.jmock
     compile testLibraries.spock
     compile testLibraries.jsoup
+
+    constraints {
+        compile("cglib:cglib-nodep:3.2.6") { because "required to work with Java 9"}
+    }
 }
 
 apply from: "$rootDir/gradle/ideaTestSourcesWorkaround.gradle"
