Import constraints in more subprojects
see 7e922ba

--- a/subprojects/distributions/distributions.gradle
+++ b/subprojects/distributions/distributions.gradle
@@ -34,6 +34,10 @@ configurations {
     dists
 }
 
+dependencies {
+    compile project(':distributionsDependencies')
+}
+
 evaluationDependsOn ":docs"
 
 ext {
