--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -18,6 +18,10 @@ ext {
     libraries = [:]
 }
 
+// All libraries that are required to compile and run Gradle are listed here.
+// Most of them are also part of the distribution as they are declared as dependencies in one of Gradle's subprojects.
+// Everything that's in 'libraries' is added as a dependency constraints with a 'strict' version requirement (see distributions-dependencies.gradle).
+// This way we make sure that a version is not accidentally updated transitively.
 libraries.aether_connector =    [coordinate: 'org.sonatype.aether:aether-connector-wagon', version: '1.13.1']
 libraries.ant =                 [coordinate: 'org.apache.ant:ant', version: '1.9.9']
 libraries.asm =                 [coordinate: 'org.ow2.asm:asm', version: '6.0']
