--- a/subprojects/docs/docs.gradle
+++ b/subprojects/docs/docs.gradle
@@ -56,6 +56,8 @@ configurations {
 }
 
 dependencies {
+    testCompile project(":distributionsDependencies")
+
     userGuideTask 'xalan:xalan:2.7.1', 'xerces:xercesImpl:2.11.0'
     userGuideTask 'xhtmlrenderer:xhtmlrenderer:R8rc1'
     userGuideTask 'itext:itext:2.0.8'
