Add dependency constraint for asm-analysis

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -28,6 +28,7 @@ libraries.asm =                 [coordinate: 'org.ow2.asm:asm', version: '6.0']
 libraries.asm_commons =         [coordinate: 'org.ow2.asm:asm-commons', version: libraries.asm.version]
 libraries.asm_tree =            [coordinate: 'org.ow2.asm:asm-tree', version: libraries.asm.version]
 libraries.asm_util =            [coordinate: 'org.ow2.asm:asm-util', version: libraries.asm.version]
+libraries.asm_analysis =        [coordinate: 'org.ow2.asm:asm-analysis', version: libraries.asm.version]
 libraries.awsS3_core =          [coordinate: 'com.amazonaws:aws-java-sdk-core', version: '1.11.267']
 libraries.awsS3_s3 =            [coordinate: 'com.amazonaws:aws-java-sdk-s3',   version: libraries.awsS3_core.version]
 libraries.awsS3_kms =           [coordinate: 'com.amazonaws:aws-java-sdk-kms',  version: libraries.awsS3_core.version]
