Lift captured `project.toString` to conf. time.
This change is required to fix gradle doc sample project configuration
cache compatibility.

Signed-off-by: Fedor Ihnatkevich <f.giffist@yandex.ru>
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/buildlifecycle/projectEvaluateEvents/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/buildlifecycle/projectEvaluateEvents/groovy/build.gradle
@@ -2,10 +2,11 @@
 allprojects {
     afterEvaluate { project ->
         if (project.hasTests) {
-            println "Adding test task to $project"
+            def projectString = project.toString()
+            println "Adding test task to $projectString"
             project.task('test') {
                 doLast {
-                    println "Running tests for $project"
+                    println "Running tests for $projectString"
                 }
             }
         }
