Adjust the syntax
Signed-off-by: Siddardha Bezawada <siddardhab123@gmail.com>

--- a/subprojects/docs/src/snippets/tutorial/configureTaskUsingProjectProperty/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/tutorial/configureTaskUsingProjectProperty/groovy/build.gradle
@@ -1,7 +1,7 @@
 tasks.register('performRelease') {
     def isCI = providers.gradleProperty("isCI")
     doLast {
-        if (isCI.isPresent()) {
+        if (isCI.isPresent) {
             println("Performing release actions")
         } else {
             throw new InvalidUserDataException("Cannot perform release outside of CI")
