Applied suggestions about code style and variable declarations
Signed-off-by: Victor Maldonado <vmmzn20@gmail.com>
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/files/fileCollections/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/files/fileCollections/groovy/build.gradle
@@ -69,7 +69,7 @@ tasks.register('filterTextFiles') {
         }
         // end::filtering-file-collections[]
 
-        textFiles.collect { projectDirectory.asFile.toPath().relativize(it.toPath()).toString() }.sort().each { String path ->
+        textFiles.collect { projectDirectory.asFile.relativePath(it).toString() }.sort().each { String path ->
             println path
         }
 
