Replaced relativize with relativePath function in groovy script.
Signed-off-by: Victor Maldonado <vmmzn20@gmail.com>
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/files/fileCollections/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/files/fileCollections/groovy/build.gradle
@@ -25,11 +25,11 @@ tasks.register('list') {
 
         srcDir = projectDirectory.file('src').asFile
         println "Contents of $srcDir.name"
-        collection.collect { projectDirectory.asFile.toPath().relativize(it.toPath()) }.sort().each { println it }
+        collection.collect { projectDirectory.asFile.relativePath(it) }.sort().each { println it }
 
         srcDir = projectDirectory.file('src2').asFile
         println "Contents of $srcDir.name"
-        collection.collect { projectDirectory.asFile.toPath().relativize(it.toPath()) }.sort().each { println it }
+        collection.collect { projectDirectory.asFile.relativePath(it) }.sort().each { println it }
     }
 }
 // end::closure[]
