--- a/subprojects/docs/src/snippets/dependencyManagement/managingTransitiveDependencies-excludeForConfiguration/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/dependencyManagement/managingTransitiveDependencies-excludeForConfiguration/groovy/build.gradle
@@ -20,7 +20,8 @@ dependencies {
 // end::exclude-transitive-dependencies[]
 
 tasks.register("printArtifacts") {
+    def runtimeClasspath = configurations.getByName("runtimeClasspath")
     doLast {
-        configurations.runtimeClasspath.each { println(it.name) }
+        runtimeClasspath.each { println(it.name) }
     }
 }
