Adjust the snippet for configuration cache
Signed-off-by: Siddardha Bezawada <siddardhab123@gmail.com>

--- a/subprojects/docs/src/snippets/dependencyManagement/managingTransitiveDependencies-excludeForConfiguration/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/dependencyManagement/managingTransitiveDependencies-excludeForConfiguration/groovy/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 // end::exclude-transitive-dependencies[]
 
 tasks.register("printArtifacts") {
-    def runtimeClasspath = configurations.getByName("runtimeClasspath")
+    def runtimeClasspath = configurations.runtimeClasspath
     doLast {
         runtimeClasspath.each { println(it.name) }
     }
