--- a/subprojects/docs/src/samples/build-organization/publishing-convention-plugins/groovy/convention-plugins/build.gradle
+++ b/subprojects/docs/src/samples/build-organization/publishing-convention-plugins/groovy/convention-plugins/build.gradle
@@ -33,7 +33,7 @@ repositories {
 
 dependencies {
     implementation 'gradle.plugin.com.github.spotbugs.snom:spotbugs-gradle-plugin:4.7.2'
-    testImplementation platform("org.spockframework:spock-bom:2.2-M3-groovy-4.0")
+    testImplementation platform("org.spockframework:spock-bom:2.2-groovy-4.0")
     testImplementation 'org.spockframework:spock-core'
 }
 
