--- a/subprojects/docs/src/snippets/configurationCache/testKit/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/configurationCache/testKit/groovy/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 dependencies {
-    testImplementation platform("org.spockframework:spock-bom:2.2-M3-groovy-4.0")
+    testImplementation platform("org.spockframework:spock-bom:2.2-groovy-4.0")
     testImplementation 'org.spockframework:spock-core'
 }
 
