Remove spec versioning
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
+++ b/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
@@ -53,7 +53,7 @@ abstract class DummyPlugin implements Plugin<Settings> {
         settings.getPlugins().apply("jdk-toolchains");
 
         JavaToolchainRepositoryRegistry registry = getToolchainRepositoryRegistry();
-        registry.register(name, DummyRepo.class, JavaToolchainSpecVersion.currentSpecVersion)
+        registry.register(name, DummyRepo.class)
     }
 }
 
