Adapt tests to latest changes
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
+++ b/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
@@ -59,7 +59,7 @@ abstract class DummyPlugin implements Plugin<Settings> {
 
 abstract class DummyRepo implements JavaToolchainRepository {
     @Override
-    Optional<URI> toUri(JavaToolchainSpec spec, org.gradle.platform.BuildEnvironment env) {
+    Optional<URI> toUri(JavaToolchainRequest request) {
         return Optional.empty();
     }
 }
