--- a/subprojects/docs/src/snippets/testing/test-suite-configure-suite-dependencies/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/testing/test-suite-configure-suite-dependencies/groovy/build.gradle
@@ -35,6 +35,11 @@ testing {
                 annotationProcessor 'com.google.auto.value:auto-value:1.9' // <3>
             }
         }
+        integrationTest(JvmTestSuite) {
+            dependencies {
+                implementation projectInternalView() // <4>
+            }
+        }
     }
 }
 // end::configure-suite-dependencies[]
