Fix init script snippets under config cache
Fixes: #21718

--- a/subprojects/docs/src/snippets/initScripts/plugins/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/initScripts/plugins/groovy/build.gradle
@@ -4,10 +4,11 @@ repositories{
 }
 
 tasks.register('showRepositories') {
-     doLast {
-         repositories.each {
-             println "repository: ${it.name} ('${it.url}')"
-         }
-     }
+    def repositoryData = repositories.collectEntries { [it.name, it.url] }
+    doLast {
+        repositoryData.each {
+            println "repository: ${it.key} ('${it.value}')"
+        }
+    }
 }
 // end::show-repos-task[]
