--- a/subprojects/docs/src/snippets/testing/test-suite-configure-suite-dependencies-project/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/testing/test-suite-configure-suite-dependencies-project/groovy/build.gradle
@@ -15,7 +15,7 @@
  */
 
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
 version = '1.0.2'
@@ -25,16 +25,24 @@ repositories {
     mavenCentral()
 }
 
-// tag::configure-suite-dependencies[]
+// tag::configure-suite-dependencies-project[]
+dependencies {
+    api 'com.google.guava:guava:30.1.1-jre' // <1>
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3' // <2>
+}
+
 testing {
     suites {
-        test { // <1>
+        integrationTest(JvmTestSuite) {
             dependencies {
-                // Note that this is equivalent to adding dependencies to testImplementation in the top-level dependencies block
-                implementation 'org.assertj:assertj-core:3.21.0' // <2>
-                annotationProcessor 'com.google.auto.value:auto-value:1.9' // <3>
+                implementation project() // <3>
+            }
+        }
+        customUnitTest(JvmTestSuite) {
+            dependencies {
+                implementation projectInternalView() // <4>
             }
         }
     }
 }
-// end::configure-suite-dependencies[]
+// end::configure-suite-dependencies-project[]
