Fix snippets for configuration cache
Adjusts "customizingResolution-metadataRule" sample for configuration cache

Signed-off-by: prasad-333 <37048768+prasad-333@users.noreply.github.com>
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-metadataRule/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-metadataRule/groovy/build.gradle
@@ -292,8 +292,9 @@ dependencies {
 // end::custom-status-scheme[]
 
 tasks.register("compileClasspathArtifacts") {
+    FileCollection compileClasspath = configurations["compileClasspath"]
     doLast {
-        configurations["compileClasspath"].findAll { !it.name.startsWith("commons-lang3") }.each { println(it.name) }
+        compileClasspath.findAll { !it.name.startsWith("commons-lang3") }.each { println(it.name) }
     }
 }
 tasks.register("failRuntimeClasspathResolve") {
@@ -302,10 +303,11 @@ tasks.register("failRuntimeClasspathResolve") {
     }
 }
 tasks.register("runtimeClasspathArtifacts") {
+    FileCollection runtimeClasspath = configurations["runtimeClasspath"]
     doLast {
-        configurations["runtimeClasspath"].attributes {
+        runtimeClasspath.attributes {
             attribute(MachineArchitecture.ARCHITECTURE_ATTRIBUTE, objects.named(MachineArchitecture, "x86"))
         }
-        configurations["runtimeClasspath"].findAll { !it.name.startsWith("commons-lang3") }.each { println(it.name) }
+        runtimeClasspath.findAll { !it.name.startsWith("commons-lang3") }.each { println(it.name) }
     }
 }
